got alignment of the nav so that it scales correctly

--- a/assets/css/review.css
+++ b/assets/css/review.css
@@ -6,9 +6,14 @@ body{
     background-color: lightgrey;
 }
 
+.bodyh1{
+    text-indent: 7%;
+}
+
 .text {
     display: flex;
     flex-wrap:wrap;
+    text-indent: 7%;
 }
 
 .topNav{
@@ -32,7 +37,7 @@ header
 header
 {
     display: flex;
-    align-self:baseline;
+    align-self: center;
     background-color: darkgray;  
     justify-content: center;
     color: gray;
@@ -47,8 +52,9 @@ header h2
 {
    font-size: 1rem;
    color: lightgrey;
-   padding-top: 1.7%;
-   margin-left: 0.7%;
+   /* padding-top: 1.7%;
+   margin-left: 0.7%; */
+   align-self: center;
 }
 
 /*****************************************
@@ -114,15 +120,14 @@ feild set / form
 ******************************************/
 fieldset{
     display: flex;
-    /* justify-content: center; */
     padding-left: auto;
     color: #303030;
     border-top-color:  #303030;
+    justify-items: center;
+    margin: 5%;
 }
 
 form{
-    /* display: flex; */
-    /* margin-left: auto; */
     align-items: baseline;
 }
 
@@ -153,7 +158,7 @@ input[type=submit]
 
 label {
     color: #fdfdfd;
-    font-size: 120%;
+    font-size: 140%;
     margin-left: 25%;
     justify-content: baseline;
     
